--- a/app/src/main/res/layout/fragment_add_book.xml
+++ b/app/src/main/res/layout/fragment_add_book.xml
@@ -8,6 +8,11 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center_horizontal|top">
 
+        <FrameLayout
+            android:id="@+id/camera_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
